# guile-rman

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  dev-environ  libtool  lightningize  log
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
lightning/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  aqsisnv.i  help.i  ignores.i  libguile_rman_rispec.la  libguile_rman_rispec_la-rispec_wrap.lo  log  rispec.i  rispec_wrap.c  rispec_wrap.cpp  sphere1.tif
src/.deps/: libguile_rman_rispec_la-rispec_wrap.Plo
src/.libs/: libguile_rman_rispec.la  libguile_rman_rispec.lai  libguile_rman_rispec.so.0  libguile_rman_rispec.so.0.0.0
src/rman/: rispec.scm  utilities.scm
tests/: Makefile  Makefile.am  Makefile.in  constant.slx  gtk-test.scm  log  plastic.slx  ri.pic  sphere1.tif  test.scm  test1.scm  test2.scm  test3.scm  test3.tif  test4.scm
unit-tests/: Makefile.am  sphere1.tif  test  test-ri2rib.scm  test-rispec.scm  test-utilities.scm  test.scm  test2.scm  test3.scm  test3a.scm
